--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta charset="utf-8"                                                              >
 	<meta name="author" content="Minh Duc Ha">
 	<meta name="discription" content="my first Website">
 	<meta name="country" content="Germany">
 	<meta name="viewpoint" content="width-device=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/10.css">
+	<Script src="js/myscript.js"></Script>
 	<title>Ha Minh Duc Resume</title>
 
 </head>
