edit file javascripts

--- a/index.html
+++ b/index.html
@@ -51,33 +51,36 @@
 				</tr>
 				<tr>
 					<th class="year">2019</th>
-					<td>10</td>
-					<td>0</td>
-					<td>9</td>
-					<td>8</td>
+					<td id="score0">10</td>
+					<td id="score1">0</td>
+					<td id="score2">9</td>
+					<td id="score3">8</td>
 				</tr>
 				<tr>
 					<th class="year">2020</th>
-					<td>10</td>
-					<td>0</td>
-					<td>9</td>
-					<td>10</td>
+					<td id="score4">10</td>
+					<td id="score5">0</td>
+					<td id="score6">9</td>
+					<td id="score7">10</td>
 				</tr>
 				<tr>
 					<th class="year">2021</th>
-					<td>10</td>
-					<td>0</td>
-					<td>10</td>
-					<td>9</td>
+					<td id="score8">10</td>
+					<td id="score9">0</td>
+					<td id="score10">10</td>
+					<td id="score11">9</td>
 				</tr>
 				<tr>
 					<th class="year">2022</th>
-					<td>10</td>
-					<td>0</td>
-					<td>10</td>
-					<td>9</td>
+					<td id="score12">10</td>
+					<td id="score13">0</td>
+					<td id="score14">10</td>
+					<td id="score15">9</td>
 				</tr>
 			</table>
+			<p><strong>Your Average: </strong></p>
+			<p id="res"></p>
+			<button type="button" id="btn">SUM</button>
 			<h2 id="social">Social Media</h2>
 			<p>Facebook:<a href="https://www.facebook.com/tom.real.908">Ha Minh Duc</a></p>
 			<p>Youtube:<a href="https://youtube.com"> Minh Duc Ha</a></p>
