personalize my background

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<a href="#education" class="menu_left">Education</a>
 		<a href="#scores" class="menu_left">Scores</a>
 		<a href="#social" class="menu_right">Social Media</a>
-		<a href="#course" class="menu_right">Course</a>
+		<a href="#background" class="menu_right">Course</a>
 	</nav>
 
 	<div class="flex-container">
@@ -86,37 +86,42 @@
 			<p>Youtube:<a href="https://youtube.com"> Minh Duc Ha</a></p>
 		</div>
 		<div class="right-side">
-			<h2 class ="course">Online Course</h2>
-			<div id ="flex-course">
-				<div class="course-items">
-					<img src="assets/math.jpg" alt="Logic Math" class ="course-img">
-					<div class ="course-titel">Logic Math</div>
-					<div class ="course-text">Toán tư duy cơ bản, xây dựng nền tảng cho việc học kĩ thuật và lập trình bậc đại học</div>
+			<h2 class ="background">Background</h2>
+			<div id ="flex-background">
+				<div class="background-items">
+					<img src="assets/abitur.png" alt="abitur" class ="background-img-square">
+					<div class ="background-titel">Tran Dai Nghia High School for Gifted</div>
+					<div class ="background-text">2017-2020:I was a student of chemistry class in this school.In this period i had evitably a lot of opportunity to discover about the culture of Germany </div>
 				</div>
-				<div class="course-items">
-					<img src="assets/web.jpg" alt="Web Basic" class ="course-img">
-					<div class="course-titel">Web Basic</div>
-					<div class="course-text">Lập trình website cho người mới bắt đầu, xây dựng website cá nhân và hệ thống backend theo ý muốn</div>
+				<div class="background-items">
+					<br><br><br><br>
+					<img src="assets/parttime.jpg" alt="parttimejob" class ="background-img">
+					<div class="background-titel">Garena Game Company</div>
+					<div class="background-text">2020-2021: I worked as a techinical support for professional game competition</div>
 				</div>
-				<div class="course-items">
-					<img src="assets/python.jpg" alt="Python Basic" class ="course-img">
-					<div class="course-titel">Python basic</div>
-					<div class="course-text">Lập trình python cơ bản đến nâng cao cho người mới, nắm vững kĩ thuật lập trình căn bản</div>
+				<div class="background-items">
+					<img src="assets/volunteer.png" alt="volunteer" class ="background-img-square">
+					<div class="background-titel">Youth Group</div>
+					<div class="background-text">2020-2021: I did a voluntary jobs to prevent Covid-19 disease</div>
 				</div>
-				<div class="course-items">
-					<img src="assets/game.jpg" alt="Game Python" class ="course-img">
-					<div class="course-titel">Game Python</div>
-					<div class="course-text">Lập trình Game rắn săn mồi, đồng hồ đếm ngược là flappy bird bằng thư viện đồ họa pygame</div>
+				<div class="background-items">
+					<br><br><br>
+					<img src="assets/stk.png" alt="Studienkolleg" class ="background-img">
+					<br><br><br>
+					<div class="background-titel">Fachhochschule Kiel</div>
+					<div class="background-text">2021-2022: I spent a year on preparing for the tertiary education </div>
 				</div>
-				<div class="course-items">
-					<img src="assets/data.jpg" alt="Data Science" class ="course-img">
-					<div class="course-titel">Data Science</div>
-					<div class="course-text">Xử dụng kĩ thuật làm sạch dữ liệu và vẽ biểu đồ bằng thư viện matplotlib để phân tích điểm thi đại học 2020</div>
+				<div class="background-items">
+					<img src="assets/bachelor.jpg" alt="bachelor" class ="background-img-fh">
+					<div class="background-titel">Fachhochschule Aachen</div>
+					<div class="background-text">2022-now: I am studying dual degree : applied mathematics and informatic in this school</div>
 				</div>
-				<div class="course-items">
-					<img src="assets/ai.jpg" alt="Ai Basic" class ="course-img">
-					<div class="course-titel">AI Basic</div>
-					<div class="course-text">Lập trình trí tuệ nhân tạo, thuật toán KNN, K-means, Regression và Gradient Descent, sử dụng toán cao cấp và ma trận cơ bản</div>
+				<div class="background-items">
+					<br>
+					<img src="assets/rwth.png" alt="fulltimejob" class ="background-img">
+					<br><br><br>
+					<div class="background-titel">RWTH Aachen University</div>
+					<div class="background-text">2022-now: I am working as software developer for data  research proccess and data management departments for this university</div>
 				</div>
 			</div>
 		</div>
