checkbox and dropbox in reǵister.js edit

--- a/register/confirm.html
+++ b/register/confirm.html
@@ -19,6 +19,8 @@
             <p>Your Phone Number: <span id="confirm-phonenumber"></span>   </p>
             <p>Your Age: <span id="confirm-age"></span>   </p>
             <p>Your registered Degree: <span id="confirm-degree"></span>   </p>
+            <p>Your Requirement: <span id="confirm-requirement"></span>   </p>
+            <p>Your registered Major: <span id="confirm-major"></span>   </p>
 
         </fieldset>
         <br>
