--- a/register/register.html
+++ b/register/register.html
@@ -53,21 +53,21 @@
         <fieldset id="radioRequire">
             <legend>Stanford Requirement</legend>
             <label for="universitygeraduation">University Graduation</label>
-            <input type="checkbox" id="universitygraduation" name="universitygraduation" value="passed"><br>
+            <input type="checkbox" id="universitygraduation" name="University Graduation" value="passed"><br>
             <label for="english">English</label>
-            <input type="checkbox" id="english" name="english" value="passed"><br>
+            <input type="checkbox" id="english" name="English" value="passed"><br>
             <label for="interview">Interview</label>
-            <input type="checkbox" id="interview" name="interview" value="passed"><br>
+            <input type="checkbox" id="interview" name="Interview" value="passed"><br>
             <label for="essay">Essay</label>
-            <input type="checkbox" id="essay" name="essay" value="passed"><br>
+            <input type="checkbox" id="essay" name="Essay" value="passed"><br>
         </fieldset>
         <br>
         <label for="major">Major:</label>
         <select name="major" id="major">
-            <option value="none">Please choose</option>
-            <option value="computerscience">Computer Science</option>
-            <option value="businessadmistration">Business Admistration</option>
-            <option value="dual">Dual</option>
+            <option value="None">Please choose</option>
+            <option value="Computer Science">Computer Science</option>
+            <option value="Business Admistration">Business Admistration</option>
+            <option value="Dual">Dual</option>
         </select><br>
          <br>
         <input type="submit" value="Register Now">
