--- a/register/confirm.html
+++ b/register/confirm.html
@@ -21,6 +21,7 @@
             <p>Your registered Degree: <span id="confirm-degree"></span>   </p>
             <p>Your Requirement: <span id="confirm-requirement"></span>   </p>
             <p>Your registered Major: <span id="confirm-major"></span>   </p>
+            <p>Your Result: <span id="confirm-result"></span>   </p>
 
         </fieldset>
         <br>
