--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"                                                              >
+	<meta charset="utf-8">
 	<meta name="author" content="Minh Duc Ha">
 	<meta name="discription" content="my first Website">
 	<meta name="country" content="Germany">
@@ -83,7 +83,7 @@
 			<button type="button" id="btn">SUM</button>
 			<h2 id="social">Social Media</h2>
 			<p>Facebook:<a href="https://www.facebook.com/tom.real.908">Ha Minh Duc</a></p>
-			<p>Youtube:<a href="https://youtube.com"> Minh Duc Ha</a></p>
+			<p>Youtube:<a href="https://youtubeuewo.com"> Minh Duc Ha</a></p>
 		</div>
 		<div class="right-side">
 			<h2 class ="background">Background</h2>
